@@ -1283,6 +1283,9 @@ check_gitignore() {
     [ -n "${FILE_GLOB-}" ] || FILE_GLOB="'*'"
     # Always filter these names away:
     FILE_GLOB_EXCLUDE="':!.ci*.log*' ':!VERSION_DEFAULT' ':!VERSION_FORCED*'"
+    if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] ; then
+        FILE_GLOB_EXCLUDE="$FILE_GLOB_EXCLUDE ':!config.cache*'"
+    fi
     [ -n "${GIT_ARGS-}" ] || GIT_ARGS='' # e.g. GIT_ARGS="--ignored"
     # Display contents of the diff?
     # (Helps copy-paste from CI logs to source to amend quickly)
@@ -1349,6 +1352,10 @@ consider_cleanup_shortcut() {
         fi
     fi
 
+    if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xyes ]; then
+        rm -f config.cache*
+    fi
+
     # When iterating configure.ac or m4 sources, we can end up with an
     # existing but useless script file - nuke it and restart from scratch!
     if [ -s "${CI_BUILDDIR}"/configure ] ; then
@@ -1403,14 +1410,29 @@ optional_maintainer_clean_check() {
     else
         [ -z "$CI_TIME" ] || echo "`date`: Starting maintainer-clean check of currently tested project..."
 
+        rm -f config.cache.tmp || true
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache ]; then
+            echo "=== Keeping old config.cache as asked by BUILD_TYPE default or caller request"
+            cp -f config.cache config.cache.tmp
+        fi
+
         # Note: currently Makefile.am has just a dummy "distcleancheck" rule
+        MAKE_RES=0
         case "$MAKE_FLAGS $DISTCHECK_FLAGS $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN" in
         *V=0*)
-            $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN maintainer-clean > /dev/null || return
+            $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN maintainer-clean > /dev/null || MAKE_RES=$?
             ;;
         *)
-            $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN maintainer-clean || return
+            $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN maintainer-clean || MAKE_RES=$?
         esac
+
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache.tmp ]; then
+            mv -f config.cache.tmp config.cache || true
+        fi
+
+        if [ x"$MAKE_RES" != x0 ]; then
+            return $MAKE_RES
+        fi
 
         GIT_ARGS="--ignored" check_gitignore "maintainer-clean" || return
     fi
@@ -1438,8 +1460,23 @@ optional_dist_clean_check() {
     else
         [ -z "$CI_TIME" ] || echo "`date`: Starting dist-clean check of currently tested project..."
 
+        rm -f config.cache.tmp || true
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache ]; then
+            echo "=== Keeping old config.cache as asked by BUILD_TYPE default or caller request"
+            cp -f config.cache config.cache.tmp
+        fi
+
         # Note: currently Makefile.am has just a dummy "distcleancheck" rule
-        $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN distclean || return
+        MAKE_RES=0
+        $CI_TIME $MAKE DISTCHECK_FLAGS="$DISTCHECK_FLAGS" $PARMAKE_FLAGS $MAKE_FLAGS_CLEAN distclean || MAKE_RES=$?
+
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache.tmp ]; then
+            mv -f config.cache.tmp config.cache || true
+        fi
+
+        if [ x"$MAKE_RES" != x0 ]; then
+            return $MAKE_RES
+        fi
 
         check_gitignore "distclean" || return
     fi
@@ -1519,6 +1556,58 @@ fi
 # Default follows autotools:
 [ -n "${DISTCHECK_TGT-}" ] || DISTCHECK_TGT="distcheck"
 
+# https://www.gnu.org/software/autoconf/manual/autoconf-2.67/html_node/Cache-Files.html
+# By default, we clean up the config.cache between jobs (before start,
+# after finish), but do want to use (and retain) it between loop runs
+# of BUILD_TYPE="default-all-errors*".
+# Note that autotools automatically removes such file name during the
+# "make distclean" and stronger goals, so on our side we can only
+# stash and restore the file around such operations.
+[ -n "$DO_CLEAN_AUTOCONF_CACHE" ] || DO_CLEAN_AUTOCONF_CACHE="auto"
+[ -n "$DO_USE_AUTOCONF_CACHE" ] || DO_USE_AUTOCONF_CACHE="auto"
+# What about after tests (e.g. loops?)
+[ -n "$DO_CLEAN_AUTOCONF_CACHE_BEFORE" ] || DO_CLEAN_AUTOCONF_CACHE_BEFORE="$DO_CLEAN_AUTOCONF_CACHE"
+[ -n "$DO_CLEAN_AUTOCONF_CACHE_FINAL" ] || DO_CLEAN_AUTOCONF_CACHE_FINAL="$DO_CLEAN_AUTOCONF_CACHE"
+
+if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xauto ]; then
+    case "$BUILD_TYPE" in
+        default-all-errors*) DO_CLEAN_AUTOCONF_CACHE="no" ;;
+        *) DO_CLEAN_AUTOCONF_CACHE="yes" ;;
+    esac
+fi
+export DO_CLEAN_AUTOCONF_CACHE
+
+if [ x"${DO_USE_AUTOCONF_CACHE}" = xauto ]; then
+    case "$BUILD_TYPE" in
+        default-all-errors*) DO_USE_AUTOCONF_CACHE="yes" ;;
+        *) DO_USE_AUTOCONF_CACHE="no" ;;
+    esac
+fi
+export DO_USE_AUTOCONF_CACHE
+
+if [ x"${DO_CLEAN_AUTOCONF_CACHE_BEFORE}" = xauto ]; then
+    DO_CLEAN_AUTOCONF_CACHE_BEFORE="yes"
+fi
+if [ x"${DO_CLEAN_AUTOCONF_CACHE_FINAL}" = xauto ]; then
+    DO_CLEAN_AUTOCONF_CACHE_FINAL="yes"
+fi
+export DO_CLEAN_AUTOCONF_CACHE_BEFORE
+export DO_CLEAN_AUTOCONF_CACHE_FINAL
+
+if [ x"${DO_CLEAN_AUTOCONF_CACHE_BEFORE}" = xyes ]; then
+    rm -f config.cache*
+fi
+
+cleanup_exit() {
+    FINAL_RES=$?
+    if [ x"${DO_CLEAN_AUTOCONF_CACHE_FINAL}" = xyes ]; then
+        rm -f config.cache*
+    fi
+    return $FINAL_RES
+}
+
+trap 'cleanup_exit' 2 3 15
+
 echo "Processing BUILD_TYPE='${BUILD_TYPE}' ..."
 
 ensure_CI_CCACHE_SYMLINKDIR_envvar
@@ -1563,6 +1652,10 @@ default|default-alldrv|default-alldrv:no-distcheck|default-all-errors|default-al
     EXTRA_CXXFLAGS=""
 
     detect_platform_CANBUILD_LIBGD_CGI
+
+    if [ x"${DO_USE_AUTOCONF_CACHE}" = xyes ] ; then
+        CONFIG_OPTS+=("-C")
+    fi
 
     # Prepend or use this build's preferred artifacts, if any
     DEFAULT_PKG_CONFIG_PATH="${BUILD_PREFIX}/lib/pkgconfig"
@@ -1905,6 +1998,12 @@ default|default-alldrv|default-alldrv:no-distcheck|default-all-errors|default-al
         trap 'echo "!!! If clean-up looped remaking the configure script for maintainer-clean, try to:"; echo "    rm -f Makefile configure include/config.h* ; $0 $SCRIPT_ARGS"' 2
 
         echo "=== Starting initial clean-up (from old build products)"
+        rm -f config.cache.tmp || true
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache ]; then
+            echo "=== Keeping old config.cache as asked by BUILD_TYPE default or caller request"
+            cp -f config.cache config.cache.tmp
+        fi
+
         case "$MAKE_FLAGS $MAKE_FLAGS_CLEAN" in
         *V=0*)
             ${MAKE} maintainer-clean $MAKE_FLAGS_CLEAN -k > /dev/null \
@@ -1917,7 +2016,12 @@ default|default-alldrv|default-alldrv:no-distcheck|default-all-errors|default-al
         || true
         echo "=== Finished initial clean-up"
 
+        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache.tmp ]; then
+            mv -f config.cache.tmp config.cache || true
+        fi
+
         trap - 2
+        trap 'cleanup_exit' 2 3 15
     fi
 
     # Just prepare `configure` script; we run it at different points
@@ -2502,8 +2606,19 @@ default|default-alldrv|default-alldrv:no-distcheck|default-all-errors|default-al
                     echo "=== Completed sandbox cleanup-check after TESTCOMBO=${TESTCOMBO}, $BUILDSTODO build variants remaining"
                 else
                     if [ "$BUILDSTODO" -gt 0 ] && [ "${DO_CLEAN_CHECK-}" != no ]; then
+                        rm -f config.cache.tmp || true
+                        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache ]; then
+                            echo "=== Keeping old config.cache as asked by BUILD_TYPE default or caller request"
+                            cp -f config.cache config.cache.tmp
+                        fi
+
                         $MAKE distclean $MAKE_FLAGS_CLEAN -k \
                         || echo "WARNING: 'make distclean' FAILED: $? ... proceeding" >&2
+
+                        if [ x"${DO_CLEAN_AUTOCONF_CACHE}" = xno ] && [ -s config.cache.tmp ]; then
+                            mv -f config.cache.tmp config.cache || true
+                        fi
+
                         echo "=== Completed sandbox cleanup after TESTCOMBO=${TESTCOMBO}, $BUILDSTODO build variants remaining"
                     else
                         echo "=== SKIPPED sandbox cleanup because DO_CLEAN_CHECK=$DO_CLEAN_CHECK and $BUILDSTODO build variants remaining"
@@ -2664,6 +2779,10 @@ bindings)
         --with-nut_monitor=auto --with-pynut=auto \
         --disable-force-nut-version-header \
         --enable-check-NIT --enable-maintainer-mode)
+
+    if [ x"${DO_USE_AUTOCONF_CACHE}" = xyes ] ; then
+        CONFIG_OPTS+=("-C")
+    fi
 
     case x"${BUILD_TYPE}" in
         xdoc*) CONFIG_OPTS+=("--with-${BUILD_TYPE}") ;;
