@@ -150,6 +150,9 @@ https://github.com/networkupstools/nut/milestone/12
    syntax is not supported everywhere (or the `!` operator generally).
    [#3099, #1660]
 
+ - Introduced `ci_build.sh` settings and respective CI workflow settings
+   to optionally re-use a `config.cache` file from older runs. [#3108]
+
 
 Release notes for NUT 2.8.4 - what's new since 2.8.3
 ----------------------------------------------------
